--- a/ch4activity2.html
+++ b/ch4activity2.html
@@ -6,6 +6,13 @@
 
 <title>My Man Jeeves by P.G. Wodehouse</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <style>
+    
+    body {color: blue;}
+    h1 {color: black;}
+    p {margin-left: 30px;}
+    
+  </style>
 
 </head>
 
