--- a/ch4project2.html
+++ b/ch4project2.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
 <head>
 <title>Cascading Style Sheets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <style>
+    body {color: blue;}
+    h1 {color: black;}
+    p {margin-left: 30px;}
+    
+    
+  </style>
 </head>
 
 <body>
