--- a/ch4project4.html
+++ b/ch4project4.html
@@ -4,6 +4,11 @@
 <head>
 <title>Cascading Style Sheets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <style>
+    heading {color: red; font-family:arial;}
+    h1 {color:red; font-family:arial;}
+    p em {color: blue; backgroud-color: yellow;}
+  </style>
 </head>
 
 <body>
