--- a/ch4project4.html
+++ b/ch4project4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
 <head>
@@ -7,7 +7,7 @@
   <style>
     heading {color: red; font-family:arial;}
     h1 {color:red; font-family:arial;}
-    p em {color: blue; backgroud-color: yellow;}
+    p em {color: blue; background-color: yellow;}
   </style>
 </head>
 
