--- a/ch4project5.html
+++ b/ch4project5.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
 <head>
 <title>Cascading Style Sheets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <style>
+    heading {color: blue; font- family: georgia;}
+    h1, h2 {color:blue; font-family: georgia;}
+    subheading {border-bottom: 1px solid; font- family: arial;}
+    
+  </style>
 </head>
 
 <body>
