--- a/ch4project5.html
+++ b/ch4project5.html
@@ -7,7 +7,7 @@
   <style>
     heading {color: blue; font-family: georgia;}
     h1, h2 {color:blue; font-family: georgia;}
-    subheading {border-bottom: solid 1px; font- family: arial;}
+    subheading {border-bottom: 1px solid; font-family: arial;}
     
   </style>
 </head>
