--- a/ch1activity.html
+++ b/ch1activity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
    <html>
    <head>
   <title>Web Page Activity 1</title>
@@ -16,6 +16,11 @@
   <li>Shopping and catalog</li>
   <li>Search portal</li>
   </ul>
+      <h2> COMM 323 ASSIGNMENTS </h2>
+      <ul>
+         <li> <a href= "https://damiahg.github.io/ch1activity.html> Ch1activity</a> </li>
+         
+      </ul>
   <!-- Web page activity #1 by Damiah Griffin -->
   </body>
    </html>
