--- a/ch1activity.html
+++ b/ch1activity.html
@@ -16,9 +16,9 @@
   <li>Shopping and catalog</li>
   <li>Search portal</li>
   </ul>
-      <h2> COMM 323 ASSIGNMENTS </h2>
+      <h2>COMM 323 ASSIGNMENTS</h2>
       <ul>
-      <li> <a href= "https://damiahg.github.io/ch1activity.html> Ch1activity</a></li>
+      <li> Chapter 1 Activity </li>
       </ul>
   <!-- Web page activity #1 by Damiah Griffin -->
   </body>
