--- a/homepage.html
+++ b/homepage.html
@@ -6,4 +6,5 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <h1 align=center>Damiah Griffin</h1>
+    <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
