--- a/ch4project4.html
+++ b/ch4project4.html
@@ -1,14 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
 <head>
 <title>Cascading Style Sheets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <style>
-    heading {color: red; font-family:arial;}
-    h1 {color:red; font-family:arial;}
-    p em {color: blue; background-color: yellow;}
-  </style>
 </head>
 
 <body>
