--- a/ch4project4.html
+++ b/ch4project4.html
@@ -7,7 +7,7 @@
   <style>
     heading {color: red; font-family: arial;}
     h1 {color: red; font-family: arial;}
-    p em {color: blue; background-color: yellow;}
+    .emphasis {color: blue; background-color: yellow;}
      </style>
 </head>
 
