--- a/ch5project1.html
+++ b/ch5project1.html
@@ -7,6 +7,13 @@
 <style>
 body {font-family: arial, helvetica, sans-serif;}
 
+  ul.circle {list-style-type: circle;}
+  
+  ol.alpha {list-style-type: upper-alpha;}
+   
+  ul.image {list-style-image: url(diamond.gif) ;}
+  
+  
 </style>
 
 
@@ -14,7 +21,7 @@ body {font-family: arial, helvetica, sans-serif;}
 <body>
 
 <!-- Bulleted List -->
-<ul>
+<ul class="circle">
 <li>Bread
 <li>Milk
 <li>Cheese
@@ -24,7 +31,7 @@ body {font-family: arial, helvetica, sans-serif;}
 
 
 <!-- Alphabetical List -->
-<ol>
+<ol class="alpha">
 <li>Spring
 <li>Summer
 <li>Fall
@@ -33,7 +40,7 @@ body {font-family: arial, helvetica, sans-serif;}
 
 
 <!--  List Image -->
-<ul>
+<ul class="image">
 <li>Spruce
 <li>Pine
 <li>Elm
