--- a/ch5project2.html
+++ b/ch5project2.html
@@ -3,6 +3,13 @@
 <title>Web Page Project 1</title>
 <meta http-equiv="Content-Type" content="text/html;
 charset=UTF-8">
+  
+  <style>
+    p {font-family: sans-serif;}
+    
+    
+  </style>
+  
 </head>
 <body>
 <h1>The World Wide Web</h1>
