--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
  <!DOCTYPE html>
    <html>
    <head>
-  <title>Web Page Homepage</title>
+  <title>Damiah Griffin COMM 323 Basic Web Design</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <h1 align=center>Damiah Griffin</h1>
