--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <h1 align=center>Damiah Griffin</h1>
-    <h2> HTML and CSS Activities and Hand- On Projects <h2> 
+    <p> Communications Major (Broadcasting) </h2>
+    <h2> HTML and CSS Activities and Hand- On Projects </h2> 
     <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
