--- a/homepage.html
+++ b/homepage.html
@@ -8,5 +8,6 @@
   <h1 align=center>Damiah Griffin</h1>
     <p> Communications Major (Broadcasting) </h2>
     <h2> HTML and CSS Activities and Hand- On Projects </h2> 
+<p> The following activities and hands-on project were completed using the Principles of Web Design textbook by Joel Sklar </p>
     <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
