--- a/homepage.html
+++ b/homepage.html
@@ -9,5 +9,8 @@
     <p> Communications Major (Broadcasting) </h2>
     <h2> HTML and CSS Activities and Hand- On Projects </h2> 
 <p> The following activities and hands-on project were completed using the Principles of Web Design textbook by Joel Sklar </p>
+
+<ul class="circle">
+ <li><a href="DamiahG.github.io/ch1activity.html"> Ch.1 Activity</a> </li>
     <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
