--- a/homepage.html
+++ b/homepage.html
@@ -12,5 +12,25 @@
 
 <ul class="circle">
  <li><a href="DamiahG.github.io/ch1activity.html"> Ch.1 Activity</a> </li>
+ <li><a href="DamiahG.github.io/ch4activity1.html"> Ch.4 Activity 1 </a> </li>
+ <li><a href="DamiahG.github.io/ch4activity2.html"> Ch.4 Activity 2 </a> </li>
+ <li><a href="DamiahG.github.io/ch4project2.html"> Ch.4 Project 2 </a> </li>
+ <li><a href="DamiahG.github.io/ch4project3.html"> Ch.4 Project 3 </a> </li>
+ <li><a href="DamiahG.github.io/ch4project4.html"> Ch.4 Project 4 </a> </li>
+ <li><a href="DamiahG.github.io/ch4project5.html"> Ch.4 Project 5 </a> </li>
+ <li><a href="DamiahG.github.io/ch5activity1.html"> Ch.5 Activity 1 </a> </li>
+ <li><a href="DamiahG.github.io/ch5project1.html"> Ch.5 Project 1 </a> </li>
+ <li><a href="DamiahG.github.io/ch5project2.html"> Ch.5 Project 2 </a> </li>
+ <li><a href="DamiahG.github.io/Chapter06/ch6activity1.html"> Ch.6 Activity 1 </a></li>
+ <li><a href="DamiahG.github.io/Chapter06/ch6project3.html"> Ch.6 Project 3 </a></li>
+ <li><a href="DamiahG.github.io/Chapter06/ch6project4.html"> Ch.6 Project 4 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7activity1.html> Ch.7 Activity 1 </a></li>
+  <li><a href="DamiahG.github.io/Chapter07/ch7activity2.html> Ch.7 Activity 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7project1.html> Ch.7 Project 1 </a></li>
+  <li><a href="DamiahG.github.io/Chapter07/ch7project2.html> Ch.7 Project 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7project3.html> Ch.7 Project 3 </a></li>
+
+
+
     <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
