--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,8 @@
  <li><a href="DamiahG.github.io/Chapter07/ch7project1.html> Ch.7 Project 1 </a></li>
   <li><a href="DamiahG.github.io/Chapter07/ch7project2.html> Ch.7 Project 2 </a></li>
  <li><a href="DamiahG.github.io/Chapter07/ch7project3.html> Ch.7 Project 3 </a></li>
-
+  <li><a href="DamiahG.github.io/Chapter 09/ch9project2.html> Ch.9 Project 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter 09/ch9project3.html> Ch.9 Project 3 </a></li>
 
 
     <h2>COMM 323 ASSIGNMENTS</h2>
