--- a/ch1activity.html
+++ b/ch1activity.html
@@ -20,6 +20,7 @@
       <ul>
       <li> Chapter 1 Activity </li>
       </ul>
+      <p><a href="DamiahG.github.io/homepage.html> Return to homepage</a></p>
   <!-- Web page activity #1 by Damiah Griffin -->
   </body>
    </html>
