--- a/homepage.html
+++ b/homepage.html
@@ -24,14 +24,19 @@
  <li><a href="DamiahG.github.io/Chapter06/ch6activity1.html"> Ch.6 Activity 1 </a></li>
  <li><a href="DamiahG.github.io/Chapter06/ch6project3.html"> Ch.6 Project 3 </a></li>
  <li><a href="DamiahG.github.io/Chapter06/ch6project4.html"> Ch.6 Project 4 </a></li>
- <li><a href="DamiahG.github.io/Chapter07/ch7activity1.html> Ch.7 Activity 1 </a></li>
-  <li><a href="DamiahG.github.io/Chapter07/ch7activity2.html> Ch.7 Activity 2 </a></li>
- <li><a href="DamiahG.github.io/Chapter07/ch7project1.html> Ch.7 Project 1 </a></li>
-  <li><a href="DamiahG.github.io/Chapter07/ch7project2.html> Ch.7 Project 2 </a></li>
- <li><a href="DamiahG.github.io/Chapter07/ch7project3.html> Ch.7 Project 3 </a></li>
-  <li><a href="DamiahG.github.io/Chapter 09/ch9project2.html> Ch.9 Project 2 </a></li>
- <li><a href="DamiahG.github.io/Chapter 09/ch9project3.html> Ch.9 Project 3 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7activity1.html"> Ch.7 Activity 1 </a></li>
+  <li><a href="DamiahG.github.io/Chapter07/ch7activity2.html"> Ch.7 Activity 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7project1.html"> Ch.7 Project 1 </a></li>
+  <li><a href="DamiahG.github.io/Chapter07/ch7project2.html"> Ch.7 Project 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter07/ch7project3.html"> Ch.7 Project 3 </a></li>
+  <li><a href="DamiahG.github.io/Chapter 09/ch9project2.html"> Ch.9 Project 2 </a></li>
+ <li><a href="DamiahG.github.io/Chapter 09/ch9project3.html"> Ch.9 Project 3 </a></li>
 
+  <h2> UX and UI Design</h2>
+  <p> I developed the following plan for a website and created a fully-functional prototype using Figma</p>
+  <ul class="cirlcle">
+  <li><a href="https://docs.google.com/document/d/1xCs2Ag5GAI4FGJgmaV-y_uUxts8-Po3izh4KYVgiWmc/edit"> Project site plan, specification, and wire frames</a></li>
+   <li><a href="https://www.figma.com/proto/aZvHeITcWNRFSiO0rggk94/Damiah-Griffin-homepage?node-id=17%3A2&scaling=min-zoom"> Complete Prototype</a></li>
 
     <h2>COMM 323 ASSIGNMENTS</h2>
    </html>
