--- a/homepage.html
+++ b/homepage.html
@@ -3,10 +3,11 @@
    <html>
    <head>
   <title>Damiah Griffin COMM 323 Basic Web Design</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"">
   </head>
   <h1 align=center>Damiah Griffin</h1>
-    <p> Communications Major (Broadcasting) </h2>
+    <p> Communications Major (Broadcasting) </p>
+    <p><a href=
     <h2> HTML and CSS Activities and Hand- On Projects </h2> 
 <p> The following activities and hands-on project were completed using the Principles of Web Design textbook by Joel Sklar </p>
 
