--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,8 @@
   </head>
   <h1 align=center>Damiah Griffin</h1>
     <p> Communications Major (Broadcasting) </p>
-    <p><a href=
+   <p><a href="DamiahG.github.io/homepage.html"> Return to homepage </a></li>
+
     <h2> HTML and CSS Activities and Hand- On Projects </h2> 
 <p> The following activities and hands-on project were completed using the Principles of Web Design textbook by Joel Sklar </p>
 
